fix: adjust z-index value

--- a/src/styles/default/index.scss
+++ b/src/styles/default/index.scss
@@ -43,12 +43,12 @@
   position: relative;
 }
  .ant-modal-wrap {
-   z-index: 1400;
+   z-index: 1010;
  }
 
  .ant-picker-dropdown {
-  z-index: 1400;
+  z-index: 1010;
  }
  .ant-select-dropdown {
-  z-index: 1400;
+  z-index: 1010;
  }
